--- a/19-validation.Rmd
+++ b/19-validation.Rmd
@@ -45,7 +45,7 @@ We'll first read in this data.
 edbfdata <- read_csv("data/wordfreq/edbookfestall.csv")
 ```
 
-As ever, if you're working on this document from your own computer ("locally") you can download the Edinburgh Fringe data in the following way:
+As ever, if you're working on this document from your own computer ("locally") you can download the Book Festival data in the following way:
 
 ```{r, eval = F}
 edbfdata <- read_csv("https://raw.githubusercontent.com/cjbarrie/RDL-Ed/main/02-text-as-data/data/edbookfestall.csv")
